[project]
name = "temperature-agent"
version = "0.1.0"
description = "AI-powered temperature monitoring agent using Amazon Bedrock AgentCore"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=0.1.0",
    "strands-agents>=0.1.0",
    "boto3>=1.35.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["src"]
